--- a/style.css
+++ b/style.css
@@ -1,17 +1,5 @@
-body {
-    margin: 0;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #ececec;
-}
-
-#video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.5;  /* semi-transparent to see the cube */
+#clock {
+    font-size: 300px;
+    font-weight: bold;
+    text-align: center;
 }
