--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
-#tv-container {
-    /* Styles for the container */
-}
-
-.tv {
-    /* Styles for each television */
-    animation: flash 1s infinite;
-}
-
-@keyframes flash {
-    /* Define the flashing animation */
+#clock {
+    font-size: 300px;
+    font-weight: bold;
+    text-align: center;
 }
